fix scrollbar widht

--- a/src/components/TotalTable/TotalTable.scss
+++ b/src/components/TotalTable/TotalTable.scss
@@ -76,6 +76,10 @@
   &__overflow {
     overflow-x: auto;
     scrollbar-width: thin;
+  
+    &::-webkit-scrollbar {
+      width: 1px;
+    }
   }
 
   @include onBigScreen {
